# tempmail

./: .gitignore  Dockerfile  docker-compose-desenvolvimento.yml
tempmail/: entrypoint.sh  pyproject.toml  test_session_manager.py
tempmail/core/: admin.py  apps.py  last_name_data.py  middleware.py  mixins.py  models.py  name_data.py  rate_limiter.py  settings.py  urls.py  views.py
tempmail/core/migrations/: 0001_initial.py
tempmail/core/services/: smtplabs_client.py
tempmail/core/templates/core/: dados.html  dados_conteudo.html  index.html
tempmail/core/templates/core/parciais/: _editModal.html  _message_item.html  _result.html
tempmail/core/templates/parciais/: _toast.html
tempmail/core/views/: corefilesviews.py  coreviews.py  dadosviews.py  simpleviews.py
tempmail/locale/en/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
tempmail/locale/es/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
tempmail/locale/pt_BR/LC_MESSAGES/: django.po  djangojs.po
tempmail/templates/: 400.html  401.html  403.html  404.html  405.html  415.html  500.html  502.html  base.html  contato.html  privacidade.html  sobre.html  termos.html
tempmail/templates/admin/: base_site.html
tempmail/templates/adsPage/: contato.html  privacidade.html  sobre.html
tempmail/templates/parciais/: _btn_voltar.html  _btn_voltar_args.html  _erros_forms.html  _footer.html  _head.html  _messages.html  _nav.html  _pagination.html  _qrPopover.html  _toast.html
tempmail/templates/parciais/modals/: _clearCacheModal.html  _confirmationExternalLinkModal.html
(+23 files in other folders)
