[project]
name = "tempmail"
version = "0.1.0"
description = "Sistema de Email temporario com Django"
dependencies = [
    "Django>=6.0.1,<6.1",
    "uvicorn[standard]>=0.40.0",
    "httptools>=0.7.1",
    "python-magic>=0.4.27",
    "pillow>=12.1.0",
    "whitenoise>=6.11.0",
    "django-import-export>=4.4.0",
    "aiohttp>=3.13.3",
    "uvloop>=0.22.1",
    "aiosqlite>=0.22.1",
]
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
